Doc. Demo setup

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ var vis = d3.select("#chart").append("svg")
 //////////////////CONFIG//////////////////////
 // LINKS
 var queryHostName = getQueryString()["host"]
-var myURI = "read_json.rb?host=" + queryHostName 
+//var myURI = "read_json.rb?host=" + queryHostName 
+var myURI = "read_json.rb"
 
 // Print link to expand all
 var expandLink = '<a href="expand.html">Expand All</a>&nbsp&nbsp'
